--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ fastapi==0.115.8
 ffmpy==0.5.0
 filelock==3.17.0
 Flask==3.1.0
+flask-cors==5.0.1
 fsspec==2025.2.0
 gradio==5.16.1
 gradio_client==1.7.0
